# stc-test

./: .env_example  main.py  pyproject.toml  readme.md  task.md  todo
api/: __init__.py
api/busy/: functions.py  schemas.py  views.py
api/busy_workers/: busy.py  schemas.py  views.py
api/tasks/: crud.py  schemas.py  views.py
api/workers/: crud.py  schemas.py  views.py
app/: main.py
app/api/: __init__.py
app/api/busy/: functions.py  schemas.py  views.py
app/api/tasks/: crud.py  schemas.py  views.py
app/api/workers/: crud.py  schemas.py  views.py
app/core/: config.py  init_db.py
app/core/models/: database.py  task.py  worker.py
core/: config.py  init_db.py
core/models/: __init__.py  base.py  database.py  task.py  worker.py
migrations/: env.py
migrations/versions/: 0269b4037924_database_creation.py
old_files/: crud-old.py  db-old.py  main-old.py  models-not.py  schemas-old.py
